# andromeda-orchestration

./: .actrc  .ansible-lint  .coderabbit.yaml  .editorconfig  .env.json  .gitignore  .gitleaks.toml  .infisical-scan.example.toml  .infisical-scan.toml  .markdownlint-cli2.yaml  .markdownlint.json  .mcp.json  .mega-linter.yml  .mise.local.toml  .mise.local.toml.example  .mise.toml  .pre-commit-config.yaml  .safety-project.ini  .yamllint  CHANGELOG.md  CLAUDE.md  README.md  RENAME-CHECKLIST.md  ROADMAP.md  SECURITY.md  Taskfile.yml  WIKI_CONTENT_MAPPING.md  WIKI_IMPLEMENTATION_GUIDE.md  WIKI_OUTLINE.md  ansible.cfg  execution-environment.yml  kics.config  mcp.json.template  og-homelab.proxmox.yml  pyproject.toml  renovate.json  requirements.yml  save-netdata-report.sh  test_domain_assertions.yml  test_domain_assertions_fail.yml  (+1 more)
.ansible/collections/: .keep
.ansible/modules/: .keep
.ansible/roles/: .keep
.claude/: settings.local.json
.claude/agents/: (͡• ͜໒ ͡• ) documentation-specialist.md  README.md  agent-configurator.md  ansible-linter.md  ansible-playbook-developer.md  ansible-research.md  codebase-context-analyzer.md  commit-craft.md  consul-service-mesh-engineer.md  dns-migration-coordinator.md  docs-agent.md  documentation-specialist.md  git-commit-organizer.md  github-implementation-research.md  hcl-linter.md  iac-platform-architect.md  infisical-secrets-architect.md  infrastructure-assessment-analyst.md  lint-master.md  markdown-linter.md  meta-agent.md  meta-command.md  netbox-integration-engineer.md  nomad-job-developer.md  powerdns-deployment-specialist.md  project-orchestrator.md  project-status-tracker.md  python-linter.md  repository-analyst.md  (+6 more)
.devcontainer/: devcontainer.json  setup-mise.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.semgrep/: README.md  infrastructure-rules.yml
.serena/: project.yml
.yamllint.d/: no-dot-local.yaml
docs/: 1password-integration.md  CHANGELOG.md  INDEX.md  INFRASTRUCTURE-REPOS.md  README.md  assessment-playbook-fixes.md  consul-1password-setup.md  consul-telemetry-setup.md  dns-ipam-implementation-plan.md  imported-infrastructure.md  infisical-setup-and-migration.md  netbox.md  phase1-implementation-guide.md  pre-commit-setup.md  project-task-list.md  repository-structure.md  secrets-management-comparison.md  testing-strategy.md  troubleshooting.md  uv-ansible-notes.md
inventory/: README.md  netbox.yml
issues/: 1.md
jobs/: powerdns.nomad
kics-results/: results.json  results.sarif
nomad-jobs/: README.md  STORAGE.md
playbooks/: README.md  consul-nomad-integration.yml  enable-consul-nomad-simple.yml
reports/: .gitignore  README.md  SECURITY.md  consul-nomad-integration-status.md  consul-telemetry-implementation-summary.md  netdata-consul-config-2025-07-30.txt
roles/: .keep
scripts/: README.md  diagnose-megalinter.sh  find-tags.sh  find-todos.sh  fix-megalinter-issues.sh  generate-consul-certs.sh  generate-nomad-certs.sh  get-secret-from-connect.py  lint-no-dot-local.sh  mega-linter-runner.sh  run-megalinter-local.sh  scan-secrets.sh  set-1password-env.sh.example  setup-netdata-mysql.sh  setup-pdns-consul-kv.sh  setup.sh  test-act-setup.sh  test-assessment-playbooks.sh  test-megalinter.sh  validate-copilot-instructions.sh
tasks/: domain-assertions.yml  infisical-secret-lookup.yml  validate-no-hardcoded-ips.yml
tests/: test_localhost.yml
(+927 files in other folders)
